--- a/styles.css
+++ b/styles.css
@@ -6,6 +6,10 @@
 body{
     font-family: Arial, sans-serif;
     background-image: url('wallp3.jpg');
+    backgound-size: cover;
+    backgroung-attachement: fixed;
+    background-position: center;
+    background-repeat: no-repeat:
     color: #333;
     line-height: 1.6;
     padding: 0;
@@ -55,5 +59,6 @@ li{
     padding-bottom: 5px;
     flex-direction: column;
     align-items: top;
+
 
 }
