--- a/styles.css
+++ b/styles.css
@@ -6,10 +6,10 @@
 body{
     font-family: Arial, sans-serif;
     background-image: url('wallp3.jpg');
-    backgound-size: cover;
-    backgroung-attachement: fixed;
-    background-position: center;
-    background-repeat: no-repeat:
+    background-size: cover;
+    background-attachment: fixed;
+    background-repeat: no-repeat;
+    min-height: 100vh;
     color: #333;
     line-height: 1.6;
     padding: 0;
@@ -59,6 +59,5 @@ li{
     padding-bottom: 5px;
     flex-direction: column;
     align-items: top;
-
 
 }
